--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -33,7 +33,7 @@
             android:background="@null"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true" />
-
+    
     </RelativeLayout>
 
     <RelativeLayout
@@ -64,7 +64,7 @@
             android:textColor="@color/text_hint"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true" />
-
+    
     </RelativeLayout>
 
     <RelativeLayout
@@ -94,7 +94,7 @@
             android:textColor="@color/white"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true" />
-
+    
     </RelativeLayout>
 
     <RelativeLayout
@@ -124,7 +124,7 @@
             android:textColor="@color/white"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true" />
-
+    
     </RelativeLayout>
 
     <LinearLayout
@@ -157,13 +157,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/switch1"
-                android:background="@color/blue"
-                android:textOff=" 关 "
-                android:textOn=" 开 "
-                android:thumb="@color/white_blue"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="10dp"  />
+                android:layout_marginRight="10dp" />
 
         </RelativeLayout>
 
@@ -199,10 +195,10 @@
                 android:layout_marginRight="10dp" />
 
         </RelativeLayout>
-
+    
     </LinearLayout>
 
-    <Button
+    <Button      
         android:layout_marginTop="10dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
@@ -212,7 +208,7 @@
         android:textSize="24dp"
         android:text="@string/main_quit"
         android:onClick="MePageOnClick"
-        android:textColor="@color/orange"
+        android:textColor="@color/text_checked"
         android:background="@drawable/login_button_bg"
         android:layout_gravity="center_horizontal" />
 
