# Decipher Stranger # UI # Created by penghaitao 5/25

--- a/app/src/main/res/layout/activity_register_photo.xml
+++ b/app/src/main/res/layout/activity_register_photo.xml
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/imageView7"
-            android:src="@drawable/logo"
+            android:src="@drawable/ds_logo"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
 
