--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
-        android:background="@drawable/logo"
+        android:background="@drawable/ds_logo"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
