# Decipher Stranger # UI # Created by penghaitao 5/25

--- a/app/src/main/res/layout/activity_main_user.xml
+++ b/app/src/main/res/layout/activity_main_user.xml
@@ -60,7 +60,7 @@
             android:text=""
             android:id="@+id/nameText"
             android:textSize="24dp"
-            android:paddingRight="10dp"
+            android:layout_marginRight="10dp"
             android:textColor="@color/text_hint"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true" />
@@ -90,7 +90,7 @@
             android:text=""
             android:id="@+id/accountText"
             android:textSize="24dp"
-            android:paddingRight="10dp"
+            android:layout_marginRight="10dp"
             android:textColor="@color/white"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true" />
@@ -120,7 +120,7 @@
             android:text=""
             android:id="@+id/sexText"
             android:textSize="24dp"
-            android:paddingRight="10dp"
+            android:layout_marginRight="10dp"
             android:textColor="@color/white"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true" />
@@ -157,10 +157,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/switch1"
-                android:background="@color/blue"
-                android:textOff=" 关 "
-                android:textOn=" 开 "
-                android:thumb="@color/white_blue"
+                android:thumb="@color/tab"
+                android:textColor="@color/text_checked"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="10dp"  />
@@ -193,7 +191,9 @@
             <Switch
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/switch2"
+                android:id="@+id/switch2"     
+                android:thumb="@color/tab"
+                android:textColor="@color/text_checked"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="10dp" />
