--- a/app/src/main/res/layout/activity_main_user.xml
+++ b/app/src/main/res/layout/activity_main_user.xml
@@ -158,6 +158,8 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/switch1"
                 android:thumb="@color/tab"
+                android:textOff="关闭"
+                android:textOn="打开"
                 android:textColor="@color/text_checked"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
@@ -192,8 +194,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/switch2"     
-                android:thumb="@color/tab"
-                android:textColor="@color/text_checked"
+                android:thumb="@color/tab"        
+                android:textOff="关闭"
+                android:textOn="打开"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="10dp" />
