--- a/app/src/main/res/layout/activity_shake.xml
+++ b/app/src/main/res/layout/activity_shake.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background">
 
     <LinearLayout
         android:id="@+id/top"
@@ -10,46 +11,34 @@
         android:layout_height="wrap_content"/>
 
     <RelativeLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/tab_blue"
-        android:orientation="vertical" >
+        android:background="@color/tab"
+        android:layout_gravity="center_horizontal">
 
-        <Button
-            style="?android:attr/buttonStyleSmall"
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
             android:id="@+id/shake_back_button"
             android:onClick="shakeMain"
-            android:background="@drawable/shake_back"
-            android:layout_alignParentTop="true"
+            android:background="@null"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/home_normal"
+            android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="20dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/shake"
-            android:textColor="@color/white"
-            android:textSize="22dp"
+            android:textColor="@color/text_hint"
+            android:textSize="20dp"
+            android:layout_margin="10dp"
             android:id="@+id/shake_title"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/shake_back_button"
-            android:layout_toEndOf="@+id/shake_back_button" />
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/shake_imageButton"
-            android:onClick="shakeMain"
-            android:background="@drawable/settings"
-            android:layout_marginRight="10dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_centerHorizontal="true" />
 
     </RelativeLayout>
 
@@ -60,9 +49,8 @@
         android:layout_weight="1"
         android:id="@+id/shakeMain"
         android:onClick="shakeMain"
-        android:layout_gravity="center_horizontal"
-        android:background="@color/black_blue">
-        
+        android:layout_gravity="center_horizontal">
+
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="match_parent">
@@ -77,14 +65,6 @@
 
         </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
-            
-            </RelativeLayout>
     </LinearLayout>
-
-
 
 </LinearLayout>
