--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -1,215 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background">
+    
+    <LinearLayout
+        android:id="@+id/top"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <RelativeLayout
-        android:id="@+id/myPortrait"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="MePageOnClick"
-        android:background="@drawable/login_button_bg"
+        android:background="@color/tab"
         android:layout_gravity="center_horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/portrait"
-            android:paddingLeft="30dp"
-            android:textSize="24dp"
-            android:textColor="@color/text_checked"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true" />
 
         <ImageButton
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:id="@+id/portraitImage"
-            android:layout_margin="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/shake_back_button"
+            android:onClick="shakeMain"
             android:background="@null"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/home_normal"
             android:layout_centerVertical="true"
-            android:layout_alignParentRight="true" />
-    
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/myName"
-        android:layout_margin="5dp"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:onClick="MePageOnClick"
-        android:background="@drawable/login_button_bg">
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/name"
-            android:paddingLeft="30dp"
-            android:textSize="24dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/shake"
             android:textColor="@color/text_hint"
+            android:textSize="20dp"
+            android:layout_margin="10dp"
+            android:id="@+id/shake_title"
             android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true" />
+            android:layout_centerHorizontal="true" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:id="@+id/nameText"
-            android:textSize="24dp"
-            android:paddingRight="10dp"
-            android:textColor="@color/text_hint"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true" />
-    
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_margin="5dp"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/login_input_bg"
-        android:layout_gravity="center_horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/account_lab"
-            android:paddingLeft="30dp"
-            android:textSize="24dp"
-            android:textColor="@color/white"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:id="@+id/accountText"
-            android:textSize="24dp"
-            android:paddingRight="10dp"
-            android:textColor="@color/white"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true" />
-    
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_margin="5dp"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/login_input_bg"
-        android:layout_gravity="center_horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/sex"
-            android:paddingLeft="30dp"
-            android:textSize="24dp"
-            android:textColor="@color/white"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:id="@+id/sexText"
-            android:textSize="24dp"
-            android:paddingRight="10dp"
-            android:textColor="@color/white"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true" />
-    
     </RelativeLayout>
 
     <LinearLayout
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginBottom="5dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/login_input_bg"
+        android:layout_weight="1"
+        android:id="@+id/shakeMain"
+        android:onClick="shakeMain"
         android:layout_gravity="center_horizontal">
 
         <RelativeLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
-            <TextView
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/sound"
-                android:layout_marginLeft="15dp"
-                android:textSize="24dp"
-                android:padding="15dp"
-                android:textColor="@color/white"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true" />
-
-            <Switch
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/switch1"
+                android:id="@+id/shake_image"
+                android:src="@drawable/shake_image"
                 android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="10dp" />
+                android:layout_centerHorizontal="true" />
 
         </RelativeLayout>
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@color/page"/>
-
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="15dp"
-                android:text="@string/shake_effect"
-                android:layout_marginLeft="15dp"
-                android:textSize="24dp"
-                android:textColor="@color/white"
-                android:layout_centerVertical="true"
-                android:layout_alignParentLeft="true" />
-
-            <Switch
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/switch2"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="10dp" />
-
-        </RelativeLayout>
-    
     </LinearLayout>
-
-    <Button      
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/button"
-        android:textSize="24dp"
-        android:text="@string/main_quit"
-        android:onClick="MePageOnClick"
-        android:textColor="@color/text_checked"
-        android:background="@drawable/login_button_bg"
-        android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
