--- a/app/src/main/res/layout/activity_main_user.xml
+++ b/app/src/main/res/layout/activity_main_user.xml
@@ -21,7 +21,7 @@
             android:text="@string/portrait"
             android:paddingLeft="30dp"
             android:textSize="24dp"
-            android:textColor="@color/text_checked"
+            android:textColor="@color/text_hint"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true" />
 
