--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -19,11 +19,11 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/shake_back_button"
-            android:onClick="shakeMain"
+            android:id="@+id/updateName_back_button"
+            android:onClick="UpdateNameOnClick"
             android:background="@null"
             android:layout_marginLeft="10dp"
-            android:src="@drawable/home_normal"
+            android:src="@drawable/home_btn"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/shake"
+            android:text="@string/updateName"
             android:textColor="@color/text_hint"
             android:textSize="20dp"
             android:layout_margin="10dp"
@@ -40,30 +40,51 @@
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
 
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"      
+            android:text="@string/save"
+            android:id="@+id/save_btn"
+            android:textSize="16dp"
+            android:textColor="@color/text_checked"
+            android:onClick="UpdateNameOnClick"
+            android:background="@drawable/small_btn_bg"
+            android:layout_marginRight="10dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
     </RelativeLayout>
 
     <LinearLayout
         android:orientation="vertical"
+        android:layout_marginTop="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:id="@+id/shakeMain"
-        android:onClick="shakeMain"
+        android:background="@drawable/login_btn_normal"
         android:layout_gravity="center_horizontal">
 
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent">
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:ems="20"
+            android:maxLines="1"
+            android:id="@+id/nameText"
+            android:layout_margin="10dp"
+            android:textColor="@color/text_checked"
+            android:background="@drawable/input_bar_bg"
+            android:layout_gravity="center_horizontal" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/shake_image"
-                android:src="@drawable/shake_image"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true" />
-
-        </RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/nameTip"
+            android:textSize="16dp"
+            android:textColor="@color/text_hint"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="20dp"/>
 
     </LinearLayout>
 
