--- a/app/src/main/res/layout/nearby_view_item.xml
+++ b/app/src/main/res/layout/nearby_view_item.xml
@@ -1,53 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
     <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/login_button_bg"
+        android:layout_gravity="center_horizontal">
+
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:id="@+id/nearby_list_view_user_photo"
             android:src="@drawable/user_photo1"
-            android:layout_margin="10dp"/>
+            android:layout_margin="5dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
         <LinearLayout
+            android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="5dp"
             android:layout_toRightOf="@+id/nearby_list_view_user_photo"
-            android:layout_marginTop="5dp">
+            android:layout_toEndOf="@+id/nearby_list_view_user_photo">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/grey"
-                android:text="我是你叔叔"
-                android:id="@+id/nearby_list_view_user_name"/>
+                android:text="New Text"
+                android:textSize="16dp"
+                android:textColor="@color/text_checked"
+                android:id="@+id/nearby_list_view_user_name" />
+
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginTop="5dp">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/grey"
-                    android:text="距离："/>
+                    android:text="距离："
+                    android:textColor="@color/text_hint"
+                    android:layout_gravity="center_vertical" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/green"
+                    android:text="New Text"
+                    android:textColor="@color/text_checked"
                     android:id="@+id/nearby_list_view_distance"
-                    android:text="20公里"/>
+                    android:layout_gravity="center_vertical" />
+
             </LinearLayout>
+
         </LinearLayout>
+
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="20dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/nearby_list_view_sex"
-           /> android:src="@drawable/ic_sex_male"/>
+            android:layout_marginRight="30dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/ic_sex_male"  />
+
     </RelativeLayout>
+
 </LinearLayout>
